# ProjectEuler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Euler.hpp  main.cpp
src/Euler001/: Euler001.cpp  Euler001.hpp
